[package]
name = "drogue-cloud-registry-events"
version = "0.9.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"

[dependencies]

log = "0.4"
tracing = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"

anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

chrono = "0.4"

reqwest = { version = "0.11", optional = true }

cloudevents-sdk = "0.4"

uuid = { version = "0.8", features = ["v4"] }
mime = "0.3"

rdkafka = { version = "0.28", features = ["ssl", "sasl"], optional = true }

drogue-cloud-database-common = { path = "../database-common", optional = true }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dev-dependencies]
anyhow = "1"

[features]
default = ["with_kafka", "with_database"]
with_reqwest = ["reqwest", "cloudevents-sdk/reqwest"]
with_kafka = ["rdkafka", "cloudevents-sdk/rdkafka", "drogue-cloud-service-api/rdkafka"]
with_database = ["drogue-cloud-database-common"]