[package]
name = "drogue-cloud-registry-events"
version = "0.11.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
cloudevents-sdk = "0.5"
futures = "0.3"
humantime-serde = "1"
log = "0.4"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

rdkafka = { version = "0.28", features = ["ssl", "sasl"], optional = true }
reqwest = { version = "0.11", optional = true }

drogue-cloud-database-common = { path = "../database-common", optional = true }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-service-common = { path = "../service-common" }

[dev-dependencies]
anyhow = "1"

[features]
default = ["with_kafka", "with_database"]
with_reqwest = ["reqwest", "cloudevents-sdk/reqwest"]
with_kafka = ["rdkafka", "cloudevents-sdk/rdkafka", "drogue-cloud-service-api/rdkafka"]
with_database = ["drogue-cloud-database-common"]